--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.url= jdbc:postgresql://viaduct.proxy.rlwy.net:46019/railway
     spring.jpa.hibernate.ddl-auto= update
     spring.devtools.restart.enabled=true
 
-    spring.data.mongodb.uri=mongodb+srv://projetS5:projetS5@cluster0.bkig4py.mongodb.net/?retryWrites=true&w=majority
+    spring.data.mongodb.uri=mongodb+srv://projetS5:projetS5@cluster0.bkig4py.mongodb.net/test?retryWrites=true&w=majority
 
